# TerrainBuildingLayout

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bound.txt  constraintLine.txt  heightMap.txt  imgui.ini  riverPoints.txt
export/: Volume_0_0.txt  Volume_0_1.txt  Volume_0_2.txt  Volume_0_3.txt  Volume_0_4.txt  Volume_0_5.txt  Volume_0_6.txt  Yard_0_0.txt  Yard_0_1.txt
export/test1/: Road_0.txt  Road_1.txt  Road_10.txt  Road_100.txt  Road_101.txt  Road_102.txt  Road_103.txt  Road_104.txt  Road_105.txt  Road_106.txt  Road_107.txt  Road_108.txt  Road_109.txt  Road_11.txt  Road_110.txt  Road_111.txt  Road_112.txt  Road_113.txt  Road_114.txt  Road_115.txt  Road_116.txt  Road_117.txt  Road_118.txt  Road_119.txt  Road_12.txt  Road_120.txt  Road_121.txt  Road_122.txt  Road_123.txt  Road_124.txt  Road_125.txt  Road_126.txt  Road_127.txt  Road_13.txt  Road_14.txt  Road_15.txt  Road_16.txt  Road_17.txt  Road_18.txt  Road_19.txt  (+953 more)
src/: CMakeLists.txt  main.cpp
src/building/: CMakeLists.txt  grid.cpp  grid.h
src/differentiablePlan/: CMakeLists.txt  diffVoronoi.cpp  diffVoronoi.h  differentiableVoronoi.cpp  differentiableVoronoi.h  loss.cpp  loss.h  optimizer.cpp  optimizer.h  room.h
src/layout/: CMakeLists.txt  building.cpp  building.h  grid.cpp  grid.h  layout.cpp  layout.h
src/terrain/: CMakeLists.txt  SCARoadGenerator.cpp  SCARoadGenerator.h  terrain.cpp  terrain.h  viewshed_cuda.cu  viewshed_cuda.h
src/utils/: CMakeLists.txt  OpenSimplexNoise.cpp  chebyshevObject.cpp  chebyshevObject.h  chebyshevUtils.cpp  chebyshevUtils.h  geo.cpp  geo.h  polygonMesh.cpp  polygonMesh.h  polyloop.cpp  polyloop.h  render.cpp  render.h  renderUtil.cpp  renderUtil.h  rvd.cpp  rvd.h  tensorField.cpp  tensorField.h  util.cpp  util.h  voronoi2.cpp  voronoi2.h
tests/: CMakeLists.txt  buildingTest.cpp  canvasTest.cpp  chebyshevTest.cpp  layoutTest.cpp  planTest.cpp  rendertest.cpp  rvdTest.cpp  tensorfieldTest.cpp  terrainTest.cpp
